--- a/theme/fonts/fonts.css
+++ b/theme/fonts/fonts.css
@@ -3,3 +3,6 @@
 
 /* Courier Prime */
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+/* EB Garamond */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
