--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -7,7 +7,7 @@
     --content-max-width: 750px;
     --menu-bar-height: 50px;
     --mono-font: "Courier Prime", "Courier New", monospace;
-    --code-font-size: 0.79em /* please adjust the ace font size accordingly in editor.js */
+    --code-font-size: 1.3rem /* please adjust the ace font size accordingly in editor.js */
 }
 
 /* Themes */
