--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -8,7 +8,7 @@
 }
 
 html {
-    font-family: "EB Garamond", Cambria, Palatino Linotype, Palatino, "Liberation Serif", serif;
+    font-family: var(--font);
     color: var(--fg);
     background: linear-gradient(-180deg,#6e6e95 0,#454545 35%) fixed;
     text-size-adjust: none;
@@ -17,13 +17,13 @@ html {
 
 body {
     margin: 0;
-    font-size: 1.8rem;
+    font-size: var(--font-size);
     overflow-x: hidden;
 }
 
 code {
-    font-family: var(--mono-font) !important;
-    font-size: var(--code-font-size);
+    font-family: var(--font) !important;
+    font-size: var(--font-size);
 }
 
 /* make long words/inline code not x overflow */
@@ -36,11 +36,6 @@ main {
     overflow-x: auto;
 }
 
-h1, h2, h3 {
-    font-family: "Noto Sans", sans-serif;
-    font-weight: lighter;
-}
-
 /* Don't change font size in headers. */
 h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
     font-size: unset;
@@ -51,6 +46,10 @@ h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
 .boring { opacity: 0.6; }
 .hide-boring .boring { display: none; }
 .hidden { display: none !important; }
+
+h1, h2, h3, h4, h5 {
+    font-weight: normal
+}
 
 h2, h3 { margin-top: 2.5em; }
 h4, h5 { margin-top: 2em; }
@@ -162,8 +161,8 @@ kbd {
     border: solid 1px var(--theme-popup-border);
     box-shadow: inset 0 -1px 0 var(--theme-hover);
     display: inline-block;
-    font-size: var(--code-font-size);
-    font-family: var(--mono-font);
+    font-size: var(--font-size);
+    font-family: var(--font);
     line-height: 10px;
     padding: 4px 5px;
     vertical-align: middle;
@@ -204,15 +203,6 @@ kbd {
     color: var(--sidebar-fg);
     margin: 5px 0px;
     font-weight: bold;
-}
-
-.chapter li a,
-.chapter li strong {
-    font-weight: lighter;
-}
-
-.chapter li strong {
-    font-size: 2.5rem;
 }
 
 .result-no-output {
