--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -6,8 +6,8 @@
     --page-padding: 15px;
     --content-max-width: 750px;
     --menu-bar-height: 50px;
-    --mono-font: "Courier Prime", "Courier New", monospace;
-    --code-font-size: 1.3rem /* please adjust the ace font size accordingly in editor.js */
+    --font: "EB Garamond", "Times New Roman", serif;
+    --font-size: 1.7rem;
 }
 
 /* Themes */
