--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -2,53 +2,67 @@
 /* Globals */
 
 :root {
-    --sidebar-width: 300px;
+    --sidebar-target-width: 300px;
+    --sidebar-width: min(var(--sidebar-target-width), 80vw);
+    --sidebar-resize-indicator-width: 8px;
+    --sidebar-resize-indicator-space: 2px;
     --page-padding: 15px;
     --content-max-width: 750px;
     --menu-bar-height: 50px;
-    --font: "EB Garamond", "Times New Roman", serif;
-    --font-size: 1.7rem;
+    --font: "Open Sans", "Segoe UI", sans-serif;
+    --mono-font: "Courier Prime", "Courier New", monospace;
+    --code-font-size: 0.80em; /* please adjust the ace font size accordingly in editor.js */
 }
 
 /* Themes */
 
-.ayu, .coal, .light, .navy, .rust {
-    --bg: #454545;
+.ayu, .coal, .light, html:not(.js), .navy, .rust {
+    --bg: #000;
     --fg: #fff;
 
-    --sidebar-bg: var(--bg);
-    --sidebar-fg: var(--fg);
-    --sidebar-non-existant: #505274;
-    --sidebar-active: var(--links);
+    --sidebar-bg: #000;
+    --sidebar-fg: #fff;
+    --sidebar-non-existant: #5c6773;
+    --sidebar-active: #55ee55;
     --sidebar-spacer: #2d334f;
 
     --scrollbar: var(--sidebar-fg);
 
-    --icons: var(--fg);
-    --icons-hover: var(--fg);
+    --icons: #737480;
+    --icons-hover: #b7b9cc;
 
-    --links: #99f;
+    --links: #0096cf;
 
     --inline-code-color: #fff;
 
-    --theme-popup-bg: #9a9cd9;
-    --theme-popup-border: #7072c5;
-    --theme-hover: #aaa;
+    --theme-popup-bg: #14191f;
+    --theme-popup-border: #5c6773;
+    --theme-hover: #191f26;
 
-    --quote-bg: #773;
-    --quote-border: #c2cda1;
+    --quote-bg: hsl(226, 15%, 17%);
+    --quote-border: hsl(226, 15%, 22%);
 
-    --table-border-color: #777;
-    --table-header-bg: rgba(255, 255, 255, 0.05);
-    --table-odd-bg: rgba(255, 255, 255, 0.05);
-    --table-even-bg: rgba(255, 255, 255, 0);
+    --warning-border: #ff8e00;
 
-    --searchbar-border-color: #000;
-    --searchbar-bg: #fff;
-    --searchbar-fg: #000;
-    --searchbar-shadow-color: #aaa;
-    --searchresults-header-fg: #5f5f71;
-    --searchresults-border-color: #5c5c68;
-    --searchresults-li-bg: #242430;
-    --search-mark-bg: #a2cff5;
+    --table-border-color: hsl(210, 25%, 13%);
+    --table-header-bg: hsl(210, 25%, 28%);
+    --table-alternate-bg: hsl(210, 25%, 11%);
+
+    --searchbar-border-color: #848484;
+    --searchbar-bg: #424242;
+    --searchbar-fg: #fff;
+    --searchbar-shadow-color: #d4c89f;
+    --searchresults-header-fg: #666;
+    --searchresults-border-color: #888;
+    --searchresults-li-bg: #252932;
+    --search-mark-bg: #e3b171;
+
+    --color-scheme: dark;
+
+    /* Same as `--icons` */
+    --copy-button-filter: invert(45%) sepia(6%) saturate(621%) hue-rotate(198deg) brightness(99%) contrast(85%);
+    /* Same as `--sidebar-active` */
+    --copy-button-filter-hover: invert(68%) sepia(55%) saturate(531%) hue-rotate(341deg) brightness(104%) contrast(101%);
+
+    --footnote-highlight: #2668a6;
 }
