--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -1,29 +1,29 @@
 /* Base styles and content styles */
 
-@import 'variables.css';
-
 :root {
     /* Browser default font-size is 16px, this way 1 rem = 10px */
     font-size: 62.5%;
+    color-scheme: var(--color-scheme);
 }
 
 html {
     font-family: var(--font);
     color: var(--fg);
-    background: linear-gradient(-180deg,#906e95 0,#454545 35%) fixed;
+    background-color: var(--bg);
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
 }
 
 body {
     margin: 0;
-    font-size: var(--font-size);
+    font-size: 1.6rem;
     overflow-x: hidden;
 }
 
 code {
-    font-family: var(--font) !important;
-    font-size: var(--font-size);
+    font-family: var(--mono-font) !important;
+    font-size: var(--code-font-size);
+    direction: ltr !important;
 }
 
 /* make long words/inline code not x overflow */
@@ -47,17 +47,21 @@ h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
 .hide-boring .boring { display: none; }
 .hidden { display: none !important; }
 
-h1, h2, h3, h4, h5 {
-    font-weight: normal
+h1, h2, h3 {
+    font-weight: lighter
 }
 
-h2, h3 { margin-top: 2.5em; }
-h4, h5 { margin-top: 2em; }
+h1, h2, h3, h4, h5, h6 {
+    text-transform: lowercase
+}
+
+h2, h3 { margin-block-start: 2.5em; }
+h4, h5 { margin-block-start: 2em; }
 
 .header + .header h3,
 .header + .header h4,
 .header + .header h5 {
-    margin-top: 1em;
+    margin-block-start: 1em;
 }
 
 h1:target::before,
@@ -68,28 +72,40 @@ h5:target::before,
 h6:target::before {
     display: inline-block;
     content: "»";
-    margin-left: -30px;
+    margin-inline-start: -30px;
     width: 30px;
 }
+
+h1 { font-size: 2.2em }
+h2 { font-size: 1.9em }
+h3 { font-size: 1.6em }
+h4 { font-size: 1.3em }
+h5 { font-size: 1em }
 
 /* This is broken on Safari as of version 14, but is fixed
    in Safari Technology Preview 117 which I think will be Safari 14.2.
    https://bugs.webkit.org/show_bug.cgi?id=218076
 */
 :target {
+    /* Safari does not support logical properties */
     scroll-margin-top: calc(var(--menu-bar-height) + 0.5em);
 }
 
 .page {
     outline: 0;
     padding: 0 var(--page-padding);
-    margin-top: calc(0px - var(--menu-bar-height)); /* Compensate for the #menu-bar-hover-placeholder */
+    margin-block-start: calc(0px - var(--menu-bar-height)); /* Compensate for the #menu-bar-hover-placeholder */
 }
 .page-wrapper {
     box-sizing: border-box;
+    background-color: var(--bg);
 }
+.no-js .page-wrapper,
 .js:not(.sidebar-resizing) .page-wrapper {
     transition: margin-left 0.3s ease, transform 0.3s ease; /* Animation: slide away */
+}
+[dir=rtl] .js:not(.sidebar-resizing) .page-wrapper {
+    transition: margin-right 0.3s ease, transform 0.3s ease; /* Animation: slide away */
 }
 
 .content {
@@ -97,19 +113,15 @@ h6:target::before {
     padding: 0 5px 50px 5px;
 }
 .content main {
-    margin-left: auto;
-    margin-right: auto;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
     max-width: var(--content-max-width);
 }
 .content p { line-height: 1.45em; }
-.content ol { line-height: 1.95em; }
-.content ul { line-height: 1.95em; }
-.content a {
-    text-decoration: none;
-}
-.content a:hover {
-    text-decoration: underline;
-}
+.content ol { line-height: 1.45em; }
+.content ul { line-height: 2.5em; }
+.content a { text-decoration: none; }
+.content a:hover { text-decoration: underline; }
 .content img, .content video { max-width: 100%; }
 .content .header:link,
 .content .header:visited {
@@ -121,28 +133,29 @@ h6:target::before {
 }
 
 table {
-    margin: 1rem 0;
+    margin: 0 auto;
     border-collapse: collapse;
-    border: 1px solid var(--table-border-color);
 }
-table th, td {
-    padding: 11px 20px;
+table td {
+    padding: 3px 20px;
+    border: 1px var(--table-border-color) solid;
+}
+table thead {
+    background: var(--table-header-bg);
 }
 table thead td {
     font-weight: 700;
     border: none;
 }
 table thead th {
-    padding: 11px 20px;
+    padding: 3px 20px;
 }
 table thead tr {
-    background: var(--table-header-bg);
+    border: 1px var(--table-header-bg) solid;
 }
-table tbody tr:nth-child(even) {
-    background: var(--table-even-bg);
-}
-table tbody tr:nth-child(odd) {
-    background: var(--table-odd-bg);
+/* Alternate background colors for rows */
+table tbody tr:nth-child(2n) {
+    background: var(--table-alternate-bg);
 }
 
 
@@ -151,8 +164,31 @@ blockquote {
     padding: 0 20px;
     color: var(--fg);
     background-color: var(--quote-bg);
-    border-top: .1em solid var(--quote-border);
-    border-bottom: .1em solid var(--quote-border);
+    border-block-start: .1em solid var(--quote-border);
+    border-block-end: .1em solid var(--quote-border);
+}
+
+.warning {
+    margin: 20px;
+    padding: 0 20px;
+    border-inline-start: 2px solid var(--warning-border);
+}
+
+.warning:before {
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    margin-inline-start: calc(-1.5rem - 21px);
+    content: "ⓘ";
+    text-align: center;
+    background-color: var(--bg);
+    color: var(--warning-border);
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+blockquote .warning:before {
+    background-color: var(--quote-bg);
 }
 
 kbd {
@@ -161,23 +197,70 @@ kbd {
     border: solid 1px var(--theme-popup-border);
     box-shadow: inset 0 -1px 0 var(--theme-hover);
     display: inline-block;
-    font-size: var(--font-size);
-    font-family: var(--font);
+    font-size: var(--code-font-size);
+    font-family: var(--mono-font);
     line-height: 10px;
     padding: 4px 5px;
     vertical-align: middle;
 }
 
-:not(.footnote-definition) + .footnote-definition,
-.footnote-definition + :not(.footnote-definition) {
-    margin-top: 2em;
+sup {
+    /* Set the line-height for superscript and footnote references so that there
+       isn't an awkward space appearing above lines that contain the footnote.
+
+       See https://github.com/rust-lang/mdBook/pull/2443#discussion_r1813773583
+       for an explanation.
+    */
+    line-height: 0;
 }
+
 .footnote-definition {
     font-size: 0.9em;
-    margin: 0.5em 0;
 }
-.footnote-definition p {
-    display: inline;
+/* The default spacing for a list is a little too large. */
+.footnote-definition ul,
+.footnote-definition ol {
+    padding-left: 20px;
+}
+.footnote-definition > li {
+    /* Required to position the ::before target */
+    position: relative;
+}
+.footnote-definition > li:target {
+    scroll-margin-top: 50vh;
+}
+.footnote-reference:target {
+    scroll-margin-top: 50vh;
+}
+/* Draws a border around the footnote (including the marker) when it is selected.
+   TODO: If there are multiple linkbacks, highlight which one you just came
+   from so you know which one to click.
+*/
+.footnote-definition > li:target::before {
+    border: 2px solid var(--footnote-highlight);
+    border-radius: 6px;
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    bottom: -8px;
+    left: -32px;
+    pointer-events: none;
+    content: "";
+}
+/* Pulses the footnote reference so you can quickly see where you left off reading.
+   This could use some improvement.
+*/
+@media not (prefers-reduced-motion) {
+    .footnote-reference:target  {
+        animation: fn-highlight 0.8s;
+        border-radius: 2px;
+    }
+
+    @keyframes fn-highlight {
+        from {
+            background-color: var(--footnote-highlight);
+        }
+    }
 }
 
 .tooltiptext {
