--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -23,7 +23,7 @@
     --sidebar-bg: #000;
     --sidebar-fg: #fff;
     --sidebar-non-existant: #5c6773;
-    --sidebar-active: #55ee55;
+    --sidebar-active: #00cfba;
     --sidebar-spacer: #2d334f;
 
     --scrollbar: var(--sidebar-fg);
@@ -32,6 +32,8 @@
     --icons-hover: #b7b9cc;
 
     --links: #0096cf;
+
+    --header: #00cfba;
 
     --inline-code-color: #fff;
 
