--- a/theme/tomorrow-night.css
+++ b/theme/tomorrow-night.css
@@ -5,7 +5,7 @@
 
 /* Tomorrow Comment */
 .hljs-comment {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Red */
@@ -21,7 +21,7 @@
 .css .hljs-id,
 .css .hljs-class,
 .css .hljs-pseudo {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Orange */
@@ -32,13 +32,13 @@
 .hljs-literal,
 .hljs-params,
 .hljs-constant {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Yellow */
 .ruby .hljs-class .hljs-title,
 .css .hljs-rule .hljs-attribute {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Green */
@@ -49,13 +49,13 @@
 .hljs-name,
 .ruby .hljs-symbol,
 .xml .hljs-cdata {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Aqua */
 .hljs-title,
 .css .hljs-hexcolor {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Blue */
@@ -67,25 +67,25 @@
 .perl .hljs-sub,
 .javascript .hljs-title,
 .coffeescript .hljs-title {
-  color: #fff;
+  color: #000;
 }
 
 /* Tomorrow Purple */
 .hljs-keyword,
 .javascript .hljs-function {
-  color: #fff;
+  color: #000;
 }
 
 .hljs {
   display: block;
   overflow-x: auto;
-  color: #fff;
+  color: #000;
 }
 
 pre {
-  /* background: #fff; */
-  border-radius: 15px;
-  padding: 1rem;
+  background: #999;
+  border-radius: 0;
+  padding: 0.1rem;
 }
 
 .coffeescript .javascript,
@@ -99,9 +99,9 @@ pre {
 }
 
 .hljs-addition {
-  color: #fff;
+  color: #000;
 }
 
 .hljs-deletion {
-  color: #fff;
+  color: #000;
 }
