--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -15,6 +15,14 @@ html {
 }
 
 body {
+    background-image: url("../background-flag.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: contain;
+}
+
+body {
     margin: 0;
     font-size: 1.6rem;
     overflow-x: hidden;
@@ -98,7 +106,7 @@ h5 { font-size: 1em }
 }
 .page-wrapper {
     box-sizing: border-box;
-    background-color: var(--bg);
+    /* background-color: var(--bg); */
 }
 .no-js .page-wrapper,
 .js:not(.sidebar-resizing) .page-wrapper {
