--- a/theme/tomorrow-night.css
+++ b/theme/tomorrow-night.css
@@ -86,6 +86,14 @@ pre {
   background: #999;
   border-radius: 0;
   padding: 0.1rem;
+  scrollbar-color: #222 #999;
+}
+
+pre::-webkit-scrollbar {
+  background: #999;
+}
+pre::-webkit-scrollbar-thumb {
+  background: #222;
 }
 
 .coffeescript .javascript,
