--- a/theme/css/variables.css
+++ b/theme/css/variables.css
@@ -23,7 +23,7 @@
     --sidebar-bg: #222;
     --sidebar-fg: #fff;
     --sidebar-non-existant: #5c6773;
-    --sidebar-active: #00cfba;
+    --sidebar-active: #f4ec31;
     --sidebar-spacer: #2d334f;
 
     --scrollbar: var(--sidebar-fg);
@@ -39,14 +39,14 @@
     --theme-popup-border: #5c6773;
     --theme-hover: #191f26;
 
-    --quote-bg: hsl(226, 15%, 17%);
-    --quote-border: hsl(226, 15%, 22%);
+    --quote-bg: rgba(205, 205, 255, 0.2);
+    --quote-border: rgba(255, 255, 255, 0.3);
 
     --warning-border: #ff8e00;
 
-    --table-border-color: hsl(210, 25%, 13%);
-    --table-header-bg: hsl(210, 25%, 28%);
-    --table-alternate-bg: hsl(210, 25%, 11%);
+    --table-border-color: rgba(255, 255, 255, 0.5);
+    --table-header-bg: rgba(255, 255, 255, 0.3);
+    --table-alternate-bg: rgba(255, 255, 255, 0.2);
 
     --searchbar-border-color: #848484;
     --searchbar-bg: #424242;
